inital links added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,49 @@
-<h1>Hello World!</h1>
-<p>Welcome to my 2026 website on 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio | 2026</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <div class="logo">MyBrand</div>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-GitHub Pages
+    <section id="hero">
+        <h1>Hi, I'm [Your Name]</h1>
+        <p>A passionate developer building the future of the web.</p>
+        <a href="#projects" class="btn">View My Work</a>
+    </section>
 
-.</p>
+    <section id="projects">
+        <h2>My Projects</h2>
+        <div class="project-grid">
+            <div class="project-card">
+                <h3>Project One</h3>
+                <p>A brief description of your amazing work.</p>
+            </div>
+            <div class="project-card">
+                <h3>Project Two</h3>
+                <p>Another project showcasing your skills.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer id="contact">
+        <p>Let's connect!</p>
+        <div class="socials">
+            <a href="https://github.com/rutvikd1">GitHub</a>
+            <a href="https://www.linkedin.com/in/rutvik-dagadkhair/">LinkedIn</a>
+        </div>
+    </footer>
+</body>
+</html>
