--- a/index.html
+++ b/index.html
@@ -3,28 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio | 2026</title>
+    <title>Rutvik Dagadkhair</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <div class="logo">MyBrand</div>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <section id="hero">
-        <h1>Hi, I'm [Your Name]</h1>
-        <p>A passionate developer building the future of the web.</p>
-        <a href="#projects" class="btn">View My Work</a>
+</head>
+
+<body>
+    <nav class="site-nav">
+        <div class="logo">MyPortfolio.</div>
+        
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#projects">Work</a></li>
+            <li><a href="#experiences">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+
+        <!-- <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div> -->
+    </nav>
+
+    <section id="home">
+        <h1>Welcome to the Future.</h1>
+
+        <a href="#work" class="scroll-down" aria-label="Scroll to work">
+            <span class="arrow" aria-hidden="true"></span>
+        </a>
+
     </section>
 
-    <section id="projects">
+    <script src="script.js"></script>
+    
         <h2>My Projects</h2>
         <div class="project-grid">
             <div class="project-card">
@@ -45,5 +61,33 @@
             <a href="https://www.linkedin.com/in/rutvik-dagadkhair/">LinkedIn</a>
         </div>
     </footer>
+
+    <!-- <script>
+    (function(){
+      const btn = document.querySelector('.nav-toggle');
+      const menu = document.getElementById('nav-menu');
+
+      function toggleNav(){
+        const expanded = btn.getAttribute('aria-expanded') === 'true';
+        btn.setAttribute('aria-expanded', String(!expanded));
+        menu.classList.toggle('open');
+      }
+
+      btn.addEventListener('click', toggleNav);
+      // close when a link is clicked
+      menu.querySelectorAll('a').forEach(a => a.addEventListener('click', () => {
+        btn.setAttribute('aria-expanded', 'false');
+        menu.classList.remove('open');
+      }));
+      // close on Escape
+      document.addEventListener('keydown', e => {
+        if(e.key === 'Escape'){
+          btn.setAttribute('aria-expanded', 'false');
+          menu.classList.remove('open');
+        }
+      });
+    })();
+    </script> -->
+
 </body>
 </html>
