--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rutvik Dagadkhair</title>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
     <nav class="site-nav">
         <div class="logo">MyPortfolio.</div>
+
+        <button class="burger" aria-label="Toggle menu" aria-expanded="false">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+        </button>
         
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
@@ -22,25 +27,17 @@
             <li><a href="#experiences">About</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-
-        <!-- <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div> -->
     </nav>
 
     <section id="home">
         <h1>Welcome to the Future.</h1>
 
-        <a href="#work" class="scroll-down" aria-label="Scroll to work">
+        <a href="#projects" class="scroll-down" aria-label="Scroll to work">
             <span class="arrow" aria-hidden="true"></span>
         </a>
-
     </section>
 
-    <script src="script.js"></script>
-    
+    <section id="projects">
         <h2>My Projects</h2>
         <div class="project-grid">
             <div class="project-card">
@@ -62,32 +59,7 @@
         </div>
     </footer>
 
-    <!-- <script>
-    (function(){
-      const btn = document.querySelector('.nav-toggle');
-      const menu = document.getElementById('nav-menu');
-
-      function toggleNav(){
-        const expanded = btn.getAttribute('aria-expanded') === 'true';
-        btn.setAttribute('aria-expanded', String(!expanded));
-        menu.classList.toggle('open');
-      }
-
-      btn.addEventListener('click', toggleNav);
-      // close when a link is clicked
-      menu.querySelectorAll('a').forEach(a => a.addEventListener('click', () => {
-        btn.setAttribute('aria-expanded', 'false');
-        menu.classList.remove('open');
-      }));
-      // close on Escape
-      document.addEventListener('keydown', e => {
-        if(e.key === 'Escape'){
-          btn.setAttribute('aria-expanded', 'false');
-          menu.classList.remove('open');
-        }
-      });
-    })();
-    </script> -->
+    <script src="script.js"></script>
 
 </body>
 </html>
